HTMLCanvasElement: Add color management to toDataURL() and toBlob()

This change adds color management support to HTMLCanvasElement::toDataURL()
and HTMLCanvasElement::toBlob(). This is a retry after
chromium-review.googlesource.com/c/chromium/src/+/771541 got abandoned because
ImageData was removed from toBlob/toDataURL code path.

Bug: 782278
Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel;master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2;master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel
Change-Id: I4018aa4ca9ffc53d5c5671c804964dd0ce58ee68
Reviewed-on: https://chromium-review.googlesource.com/824462
Commit-Queue: Mohammad Reza Zakerinasab <zakerinasab@chromium.org>
Reviewed-by: Justin Novosad <junov@chromium.org>
Cr-Commit-Position: refs/heads/master@{#535081}
Former-commit-id: e8f1dd346a7c94d5d1bed16a3dd1b0570de73f84